2012-09-17  piumarta  <com -dot- gmail -at- piumarta (backwards)>

	* CMakeLists.txt: Add option '--image64'.  With --image64
	specified: append '_64bit' to plgdir, set scriptsuffix to '64' and
	versionsuffix to '64_bit'.

	* vm/config.cmake: Configure VM_VERSION_INFO as VM_VERSION with
	versionsuffix appended.

	* vm/sqUnixMain.c: Use VM_VERSION_INFO in output of '-version'.

	* vm/build.cmake: Append ${scriptsuffix} to squeakvm.

	* cmake/squeak.in: Search plgdir and plgd64 for 'ckformat'
	program.  Append '64_bit' to plgdir when 64-bit image detected.

	* cmake/configure: Add option '--image64' to help text.

	* plugins/DropPlugin/sqUnixDragDrop.c,
	plugins/HostWindowPlugin/sqUnixHostWindowPlugin.c: Fix prototypes
	for 64 bits.

2012-09-14    <piumarta@netbsd32>

	* plugins/UUIDPlugin/sqUnixUUID.c (MakeUUID): Always prefer
	uuidgen or uuid_generate to uuid_create.

2012-09-14  Ian Piumarta  <piumarta@openbsd32.my.domain>

	* vm/config.cmake: Check for and use libiconv if available.

	* plugins/UUIDPlugin/sqUnixUUID.c (MakeUUID): Use uuid_create() if
	available.

	* plugins/UUIDPlugin/config.cmake: Also check for uuid_create().

	* CMakeLists.txt: If /usr/local/include and/or /usr/local/lib
	exist, search them for headers and libraries, respectively.

	* vm-display-custom/sqUnixCustomWindow.c: Rename "aio.h" ->
	"sqaio.h".

2012-09-14  Ian Piumarta  <com -dot- gmail -at- piumarta (backwards)>

	* cmake/squeak.in (jit): Allow the interpreter VM to execute
	format 6505 images.

2012-09-14    <piumarta@netbsd32>

	* plugins/FT2Plugin/config.cmake: Check for ft2build.h instead of
	freetype.h.

	* CMakeLists.txt: Search /usr/pkg/include if it exists.

2012-09-14  Ian Piumarta  <com -dot- gmail -at- piumarta (backwards)>

	* vm-display-null/sqUnixDisplayNull.c (display_ioSetDisplayMode):
	Allow a headless image to change the size of the Display.

2012-09-14  Ian Piumarta  <com -dot- gmail -at- piumarta (backwards)>
