@@ -1,3 +1,8 @@
+2013-08-10  Ian Piumarta  <com -dot- gmail -at- piumarta (backwards)>
+
+	* vm/sqUnixMain.c: extreMemory is 64 bits on LP64 architectures.
+	(strtobkm): Returns long instead of int.
+
 2012-09-17  piumarta  <com -dot- gmail -at- piumarta (backwards)>
 
 	* CMakeLists.txt: Add option '--image64'.  With --image64
